[mobile] fix filter z-index

--- a/src/components/MainFilter.css
+++ b/src/components/MainFilter.css
@@ -5,7 +5,7 @@
     min-height: 70px;
     display: flex;
     align-content: center;
-    z-index: 1;
+    z-index: 2;
 }
 
 .stickyPlaceHolder {
@@ -83,6 +83,10 @@
         display: none !important;
     }
 
+    .return-button > p {
+        display: none !important;
+    }
+
     .main-filter > .scroll-up-button > img,
     .main-filter > .return-button > img {
         max-height: 45px;
@@ -99,6 +103,10 @@
     }
     .main-filter.character-selected > span{
         display: none;
+    }
+
+    .main-filter.character-selected > .return-button {
+        display: flex !important;
     }
 }
 
